--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen -  Parallax scroll animation </title>
+  <title>Atardecer para sarita </title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -12,7 +12,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title> Parallax scroll animation | Nothing4us </title>
+  <title> Atardecer para sarita  </title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -344,7 +344,7 @@
 
 <div class="scrollElement"></div>
   
-<a href="https://codepen.io/nothing4us/pens/public" target="_blank" class="btn btn_works">My Works</a>
+<a href="" target="_blank" class="btn btn_works">My Works</a>
 <button class="btn" id="fullscr">Go Fullscreen</button>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>
