--- a/index.html
+++ b/index.html
@@ -344,11 +344,10 @@
 
 <div class="scrollElement"></div>
   
-<a href="" target="_blank" class="btn btn_works">My Works</a>
+<a href="" target="_blank" class="btn btn_works"></a>
 <button class="btn" id="fullscr">Go Fullscreen</button>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/ScrollTrigger.min.js'></script><script  src="./script.js"></script>
+
 
 </body>
 </html>
