Modificar index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <title>CodePen -  Parallax scroll animation </title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
   <title> Parallax scroll animation | Nothing4us </title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
 
@@ -334,11 +344,16 @@
 
 <div class="scrollElement"></div>
   
-<a href="https://codepen.io/nothing4us/pens/public" target="_blank" class="btn btn_works">My Works</a>
+<a href="" target="_blank" class="btn btn_works">My Works</a>
 <button class="btn" id="fullscr">Go Fullscreen</button>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/ScrollTrigger.min.js'></script><script  src="./script.js"></script>
+
+</body>
+</html>
+<!-- partial -->
+  <script  src="./script.js"></script>
 
 </body>
 </html>
