--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen -  Parallax scroll animation </title>
+  <title>atardecer para sarita </title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -12,7 +12,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title> Parallax scroll animation | Nothing4us </title>
+  <title> Atardecer para sarita  </title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
 
 </head>
